Send email failure fix

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 <a href="https://wa.me/2348038793878" class="bg-brand-red text-white font-bold py-4 px-8 rounded-full hover:bg-red-700 transition flex items-center justify-center gap-2 shadow-[0_0_20px_rgba(220,38,38,0.4)]">
                     <i class="fab fa-whatsapp"></i> Chat on WhatsApp
                 </a>
-                <a href="mailto:bookings@baseden.live" class="bg-transparent border border-white/20 text-white font-bold py-4 px-8 rounded-full hover:bg-white hover:text-black transition flex items-center justify-center gap-2">
+                <a href="mailto:bookings@baseden.live?subject=Booking%20Request&body=Hi%20BASEDEN%2C%0AProject%20type%3A%0ADate%3A%0ALocation%3A%0ABudget%3A%0ADetails%3A%0A" target="_blank" rel="noopener" class="bg-transparent border border-white/20 text-white font-bold py-4 px-8 rounded-full hover:bg-white hover:text-black transition flex items-center justify-center gap-2">
                     <i class="far fa-envelope"></i> Send Email
                 </a>
             </div>
