--- a/index.html
+++ b/index.html
@@ -424,12 +424,12 @@
                 <a href="https://wa.me/2348038793878" class="bg-brand-red text-white font-bold py-4 px-8 rounded-full hover:bg-red-700 transition flex items-center justify-center gap-2 shadow-[0_0_20px_rgba(220,38,38,0.4)]">
                     <i class="fab fa-whatsapp"></i> Chat on WhatsApp
                 </a>
-                <button id="open-contact-form" class="bg-transparent border border-white/20 text-white font-bold py-4 px-8 rounded-full hover:bg-white hover:text-black transition flex items-center justify-center gap-2">
+                <a href="mailto:bookings@baseden.live" class="bg-transparent border border-white/20 text-white font-bold py-4 px-8 rounded-full hover:bg-white hover:text-black transition flex items-center justify-center gap-2">
                     <i class="far fa-envelope"></i> Send Email
-                </button>
+                </a>
             </div>
 
-            <div class="flex justify-center gap-6 text-2xl text-gray-500 mb-8">
+            <   div class="flex justify-center gap-6 text-2xl text-gray-500 mb-8">
                 <a href="https://www.instagram.com/denofbase?igsh=MWg3Z3FueWVrcTJubg==" class="hover:text-brand-red transition" aria-label="Instagram">
                     <i class="fab fa-instagram"></i>
                 </a>
@@ -441,31 +441,6 @@
         </div>
     </footer>
 
-    <!-- Contact Form Modal -->
-    <div id="contact-modal" class="fixed inset-0 bg-black/80 backdrop-blur-sm hidden flex items-center justify-center z-50 p-4">
-        <div class="bg-brand-gray rounded-xl border border-white/10 w-full max-w-md p-8 relative">
-            <button id="close-modal" class="absolute top-4 right-4 text-gray-400 hover:text-white transition">
-                <i class="fas fa-times text-xl"></i>
-            </button>
-            <h3 class="text-2xl font-bold mb-2 text-white">Let's Connect</h3>
-            <p class="text-gray-400 mb-6 text-sm">Fill in your details and we'll get back to you within 24 hours.</p>
-            <form id="contact-form" class="space-y-4">
-                <input type="text" name="name" placeholder="Your Name" required class="w-full px-4 py-3 bg-black/40 border border-white/10 rounded-lg text-white placeholder-gray-500 focus:border-brand-red focus:outline-none transition">
-                <input type="email" name="email" placeholder="Your Email" required class="w-full px-4 py-3 bg-black/40 border border-white/10 rounded-lg text-white placeholder-gray-500 focus:border-brand-red focus:outline-none transition">
-                <input type="tel" name="phone" placeholder="Phone Number" required class="w-full px-4 py-3 bg-black/40 border border-white/10 rounded-lg text-white placeholder-gray-500 focus:border-brand-red focus:outline-none transition">
-                <select name="service" required class="w-full px-4 py-3 bg-black/40 border border-white/10 rounded-lg text-white focus:border-brand-red focus:outline-none transition">
-                    <option value="" selected disabled>Select Service</option>
-                    <option value="Smartphone Videography">Smartphone Videography</option>
-                    <option value="Drone Pilot Service">Drone Pilot Service</option>
-                    <option value="Event Coverage">Event Coverage</option>
-                    <option value="Other">Other</option>
-                </select>
-                <textarea name="message" placeholder="Tell us about your project" rows="4" class="w-full px-4 py-3 bg-black/40 border border-white/10 rounded-lg text-white placeholder-gray-500 focus:border-brand-red focus:outline-none transition resize-none"></textarea>
-                <button type="submit" class="w-full bg-brand-red text-white font-bold py-3 rounded-lg hover:bg-red-700 transition">Send Inquiry</button>
-            </form>
-        </div>
-    </div>
-
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
@@ -473,49 +448,6 @@
             duration: 800,
             once: true,
             offset: 100,
-        });
-
-        // Contact form modal
-        const modal = document.getElementById('contact-modal');
-        const openBtn = document.getElementById('open-contact-form');
-        const closeBtn = document.getElementById('close-modal');
-        const contactForm = document.getElementById('contact-form');
-
-        openBtn.addEventListener('click', () => modal.classList.remove('hidden'));
-        closeBtn.addEventListener('click', () => modal.classList.add('hidden'));
-        modal.addEventListener('click', (e) => {
-            if (e.target === modal) modal.classList.add('hidden');
-        });
-
-        contactForm.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const formData = new FormData(contactForm);
-            const data = Object.fromEntries(formData);
-            
-            try {
-                // Send via Formspree (free service)
-                const response = await fetch('https://formspree.io/f/xjvnpjva', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        name: data.name,
-                        email: data.email,
-                        phone: data.phone,
-                        service: data.service,
-                        message: data.message
-                    })
-                });
-                
-                if (response.ok) {
-                    alert('Thank you! We\'ll be in touch soon.');
-                    contactForm.reset();
-                    modal.classList.add('hidden');
-                } else {
-                    alert('Error sending message. Please try WhatsApp instead.');
-                }
-            } catch (err) {
-                alert('Error: ' + err.message + '. Please use WhatsApp.');
-            }
         });
     </script>
 </body>
